--- a/04-parsing-mentors/package.json
+++ b/04-parsing-mentors/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.7.2",
-    "cheerio": "^1.0.0-rc.12"
+    "cheerio": "^1.0.0-rc.12",
+    "json2csv": "^6.0.0-alpha.2"
   }
 }
